--- a/css/shangjiaxiangqing.css
+++ b/css/shangjiaxiangqing.css
@@ -2,7 +2,7 @@
 * @Author: 我的文档
 * @Date:   2018-08-09 09:29:33
 * @Last Modified by:   我的文档
-* @Last Modified time: 2018-09-10 17:42:15
+* @Last Modified time: 2018-09-13 13:06:01
 */
 *{
 	margin: 0;
@@ -236,6 +236,16 @@ nav .content ul li .wenzi .wu img{
 	margin-top: 0.08rem;
 	margin-right: 0.1rem;
 }
+nav .content ul li .wenzi .wu img:nth-of-type(2){
+	display: none;
+}
+nav .content ul li .wenzi .wu h6{
+	font-size: 18px;
+	float: right;
+	margin-right: 0.15rem;
+	margin-left: 0.15px;
+	display: none;
+}
 .bottom{
 
 	width: 100%;
@@ -279,4 +289,89 @@ nav .content ul li .wenzi .wu img{
 }
 .bottom .qisong a{
 	color: #fff;
+}
+.bot{
+	display: none;
+	z-index: 3;
+}
+.bot .pic{
+	background-image: url('../img/images2/images/gouwuche_03.png');
+}
+.bot .weixuan h1:nth-child(1){
+	font-size: 18px;
+	color: #0ecf98;
+}
+.bot .qisong{
+	background: #0ecf98;
+	color: #fff;
+}
+.mask{
+	width: 100%;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.5);
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 10;
+	display: none;
+}
+.mask .upper{
+	width: 5.48rem;
+	height: 5.61rem;
+	background: #0ecf98;
+	margin-top: 3.5rem;
+	margin-left: 1rem;
+	border-radius: 0.6rem;
+	overflow: hidden;
+}
+.mask .upper .tu{
+	width: 100%;
+	height: 3.62rem;
+	border-radius: 0.6rem 0.6rem 0 0;
+	background-color: #fff;
+	background-image: url('../img/images2/images/1.png');
+	background-size: 5.48rem 3.62rem;
+}
+ .mask .upper .tu p{
+	font-size:0.4rem;
+	 float: right;
+	 margin-right: 0.4rem;
+}
+.mask .upper .xia{
+	width: 100%;
+	height: 1.99rem;
+	border-radius: 0 0 0.6rem 0.6rem;
+}
+.mask .upper .xia p{
+	font-size: 0.28rem;
+	font-weight: bold;
+	margin-left: 0.32rem;
+	margin-top: 0.2rem;
+}
+.mask .upper .xia h6{
+	font-size: 0.22rem;
+	color: #363636;
+	margin-left: 0.32rem;
+}
+.mask .upper .xia h5{
+	font-size: 0.38rem;
+	font-weight: bold;
+	color: #fff;
+	margin-left: 0.32rem;
+	margin-top: 0.2rem;
+	float: left;
+}
+.mask .upper .xia .q{
+	width: 1.56rem;
+	height: 0.56rem;
+	border-radius: 0.3rem;
+	background-color: #fff;
+	font-size: 0.26rem;
+	font-weight: bold;
+	color: #0ecf98;
+	text-align: center;
+	line-height: 0.56rem;
+	float: right;
+	margin-right: 0.32rem;
+	margin-top: 0.2rem;
 }
