--- a/css/shangjiaxiangqing.css
+++ b/css/shangjiaxiangqing.css
@@ -282,7 +282,7 @@ nav .content ul li .wenzi .wu h6{
 	background-color:#6b6b6b;
 	margin-left: 5.2rem;
 	font-size: 0.3rem;
-	
+	color: #fff;
 	text-align: center;
 	line-height: 0.6rem;
 	margin-top: 0.1rem;
