--- a/css/denglu.css
+++ b/css/denglu.css
@@ -2,7 +2,7 @@
 * @Author: 我的文档
 * @Date:   2018-08-15 12:30:10
 * @Last Modified by:   我的文档
-* @Last Modified time: 2018-09-10 17:40:58
+* @Last Modified time: 2018-11-02 17:51:45
 */
 *{
 	margin: 0;
@@ -10,6 +10,8 @@
 	list-style: none;
 	font-family: "苹方";
 	background-repeat: no-repeat;
+	-webkit-tap-highlight-color:transparent;
+
 }
 a{
 	text-decoration: none;
